CSS spacing in header fixed

--- a/Stylesheet.css
+++ b/Stylesheet.css
@@ -17,6 +17,11 @@ body {
 }
 h1, h2 {
     color: #333;
+    
+}
+
+h1 {
+    padding-inline-start:15px;
 }
 .section {
     margin-bottom: 20px;
